--- a/wsgiadmin/templates/admin.html
+++ b/wsgiadmin/templates/admin.html
@@ -130,7 +130,7 @@
                             <ul>
                                 <li><a href="{% url wsgiadmin.apacheconf.views.add_static "0" %}">{% trans "Add static page" %}</a></li>
                                 <li><a href="{% url wsgiadmin.apacheconf.views.add_static "1" %}">{% trans "Add PHP app" %}</a></li>
-                                <li><a href="{% url wsgiadmin.apacheconf.views.add_wsgi %}">{% trans "Add WSGI app" %}</a></li>
+                                <li><a href="{% url add_wsgi %}">{% trans "Add WSGI app" %}</a></li>
                                 <li><a href="{% url wsgiadmin.apacheconf.views.apache %}">{% trans "Your apps" %}</a></li>
                             </ul>
                         </li>
