--- a/wsgiadmin/templates/apache.html
+++ b/wsgiadmin/templates/apache.html
@@ -2,95 +2,111 @@
 {% load i18n %}
 
 {% block title %}
-	Administrace > Webová stránky a aplikace
+    {% trans "Administration" %} &gt; {% trans "Web pages and apps" %}
 {% endblock %}
 
 {% block jsblock %}
-{{ block.super }}
-function remove(what) {
-			$("#remove_"+what).hide()
-			$("#removed_"+what).load("{% url wsgiadmin.apacheconf.views.remove_site 0 %}"+what)
-		}
+    {{ block.super }}
+    function remove(what) {
+    $("#remove_"+what).hide()
+    $("#removed_"+what).load("{% url wsgiadmin.apacheconf.views.remove_site 0 %}"+what)
+    }
 {% endblock %}
 
 {% block content %}
-	<h2>{% trans "Webové stránky a aplikace" %}</h2>
-	<ul>
-		<li><a href="{% url wsgiadmin.apacheconf.views.add_static "0" %}">{% trans "Přidat statickou webovou stránku" %}</a></li>
-		<li><a href="{% url wsgiadmin.apacheconf.views.add_static "1" %}">{% trans "Přidat webovou stránku s PHP skriptováním" %}</a></li>
-		<li><a href="{% url wsgiadmin.apacheconf.views.add_wsgi %}">{% trans "Přidat WSGI aplikaci" %}</a></li>
-	</ul>
+    <h2>{% trans "Web pages and apps" %}</h2>
+    <ul>
+        <li>
+            <a href="{% url wsgiadmin.apacheconf.views.add_static "0" %}">
+                {% trans "Add static web page" %}
+            </a>
+        </li>
+        <li>
+            <a href="{% url wsgiadmin.apacheconf.views.add_static "1" %}">
+                {% trans "Add PHP web page" %}
+            </a>
+        </li>
+        <li>
+            <a href="{% url add_wsgi %}">
+                {% trans "Add WSGI app" %}
+            </a>
+        </li>
+    </ul>
 
-	<div id="message-box"></div>
+    <div id="message-box"></div>
 
-<h3>{% trans "Seznam provozovaných stránek a aplikací" %}</h3>
+    <h3>{% trans "List of existing apps and webs" %}</h3>
 
-<table>
-	<thead>
-		<tr>
-			<th>{% trans "Datum přidání" %}</th>
-			<th>{% trans "Typ" %}</th>
-			<th>{% trans "Server name" %}</th>
-			<th>{% trans "Akce" %}</th>
-		</tr>
-	</thead>
-	{% if sites %}
-	<tbody>
-		{% for site in sites.object_list %}
-		<tr>
-			<td>{{ site.pub_date }}</td>
-			<td>{{ site.type }}</td>
-			<td>{{ site.server_name }}</td>
-			<td>
-				{% if site.type == "php" or site.type == "static" %}
-					<a href="{% url wsgiadmin.apacheconf.views.update_static site.id %}">
-						<img src="{{ STATIC_URL }}icons/raster/gray_dark/pen_alt_stroke_16x16.png" alt="Upravit" />
-					</a>
-				{% endif %}
-				{% if site.type == "uwsgi" or site.type == "modwsgi" %}
-					{% if site.type == "uwsgi" %}
-						<a href="{% url wsgiadmin.apacheconf.views.restart site.id %}"><img src="{{ STATIC_URL }}icons/raster/gray_dark/loop_16x16.png" alt="Restartovat" /></a>
-					{% endif %}
-					<a href="{% url wsgiadmin.apacheconf.views.update_wsgi site.id %}"><img src="{{ STATIC_URL }}icons/raster/gray_dark/pen_alt_stroke_16x16.png" alt="Upravit" /></a>
-				{% endif %}
+    <table>
+        <thead>
+        <tr>
+            <th>{% trans "Create date" %}</th>
+            <th>{% trans "Type" %}</th>
+            <th>{% trans "Server name" %}</th>
+            <th>{% trans "Actions" %}</th>
+        </tr>
+        </thead>
+        {% if sites %}
+            <tbody>
+            {% for site in sites.object_list %}
+                <tr>
+                    <td>{{ site.pub_date }}</td>
+                    <td>{{ site.type }}</td>
+                    <td>{{ site.server_name }}</td>
+                    <td>
+                        {% if site.type == "php" or site.type == "static" %}
+                            <a href="{% url wsgiadmin.apacheconf.views.update_static site.id %}">
+                                <img src="{{ STATIC_URL }}icons/raster/gray_dark/pen_alt_stroke_16x16.png" alt="Edit"/>
+                            </a>
+                        {% endif %}
+                        {% if site.type == "uwsgi" or site.type == "modwsgi" %}
+                            {% if site.type == "uwsgi" %}
+                                <a href="{% url wsgiadmin.apacheconf.views.restart site.id %}"><img src="{{ STATIC_URL }}icons/raster/gray_dark/loop_16x16.png" alt="Restartovat"/></a>
+                            {% endif %}
+                            <a href="{% url wsgiadmin.apacheconf.views.update_wsgi site.id %}"><img src="{{ STATIC_URL }}icons/raster/gray_dark/pen_alt_stroke_16x16.png" alt="Upravit"/></a>
+                        {% endif %}
 
-				<a href="#" id="remove_{{site.id}}" onclick="if(confirm('{% trans "Opravdu chcete web/apliakci zrušit?" %}')) {remove('{{site.id}}');};" class="bold">
-					<img src="{{ STATIC_URL }}icons/raster/gray_dark/trash_fill_16x16.png" alt="Smazat" />
-				</a>
-				<span id="removed_{{site.id}}" class="info"></span>
-			</td>
-		</tr>
-		{% endfor %}
-	</tbody>
-	<tfoot>
-		<tr>
-			<td colspan="4">
-					<div class="pagination">
-						{% if sites.has_previous %}<a href="{% url wsgiadmin.apacheconf.views.apache 1 %}" title="{% trans "První stránka" %}">&laquo; {% trans "První" %}</a>{% endif %}
-						{% if sites.has_previous %}<a href="{% url wsgiadmin.apacheconf.views.apache sites.previous_page_number %}" title="{% trans "Předchozí stránka" %}">&laquo; {% trans "Předchozí" %}</a>{% endif %}
+                        <a href="#" id="remove_{{site.id}}" onclick="if(confirm('{% trans "Opravdu chcete web/apliakci zrušit?" %}')) {remove('{{site.id}}');};" class="bold">
+                            <img src="{{ STATIC_URL }}icons/raster/gray_dark/trash_fill_16x16.png" alt="Delete"/>
+                        </a>
+                        <span id="removed_{{site.id}}" class="info"></span>
+                    </td>
+                </tr>
+            {% endfor %}
+            </tbody>
+            <tfoot>
+            <tr>
+                <td colspan="4">
+                    <div class="pagination">
+                        {% if sites.has_previous %}
+                            <a href="{% url wsgiadmin.apacheconf.views.apache 1 %}" title="{% trans "První stránka" %}">&laquo; {% trans "First" %}</a>{% endif %}
+                        {% if sites.has_previous %}
+                            <a href="{% url wsgiadmin.apacheconf.views.apache sites.previous_page_number %}" title="{% trans "Previous page" %}">&laquo; {% trans "Previous" %}</a>{% endif %}
 
-						{% for p in paginator.page_range %}
-							{% if p == num_page %}
-								<a href="{% url wsgiadmin.apacheconf.views.apache p %}" class="number current" title="{{ p }}">{{ p }}</a>
-							{% else %}
-								<a href="{% url wsgiadmin.apacheconf.views.apache p %}" class="number" title="{{ p }}">{{ p }}</a>
-							{% endif %}
-						{% endfor %}
+                        {% for p in paginator.page_range %}
+                            {% if p == num_page %}
+                                <a href="{% url wsgiadmin.apacheconf.views.apache p %}" class="number current" title="{{ p }}">{{ p }}</a>
+                            {% else %}
+                                <a href="{% url wsgiadmin.apacheconf.views.apache p %}" class="number" title="{{ p }}">{{ p }}</a>
+                            {% endif %}
+                        {% endfor %}
 
-						{% if sites.has_next %}<a href="{% url wsgiadmin.apacheconf.views.apache sites.next_page_number %}" title="{% trans "Další stránka" %}">{% trans "Další" %} &raquo;</a>{% endif %}
-						{% if sites.has_next %}<a href="{% url wsgiadmin.apacheconf.views.apache paginator.num_pages %}" title="{% trans "Poslední stránka" %}">{% trans "Poslední" %} &raquo;</a>{% endif %}
-					</div>
-					<div class="clear"></div>
-			</td>
-		</tr>
-	</tfoot>
-	{% else %}
-	<tbody>
-	<tr>
-		<td colspan="4">{% trans "Žádný web nebyl ještě přidán. Můžete ho přidat pomocí jednoho z odkazů výše nebo levém menu." %}</td>
-	</tr>
-	</tbody>
-	{% endif%}
-</table>
+                        {% if sites.has_next %}
+                            <a href="{% url wsgiadmin.apacheconf.views.apache sites.next_page_number %}" title="{% trans "Nex page" %}">{% trans "Next" %} &raquo;</a>{% endif %}
+                        {% if sites.has_next %}
+                            <a href="{% url wsgiadmin.apacheconf.views.apache paginator.num_pages %}" title="{% trans "Last page" %}">{% trans "Last" %} &raquo;</a>{% endif %}
+                    </div>
+                    <div class="clear"></div>
+                </td>
+            </tr>
+            </tfoot>
+        {% else %}
+            <tbody>
+            <tr>
+                <td colspan="4">{% trans "Crap! No web here. However, you can add one with the menu on left side" %}</td>
+            </tr>
+            </tbody>
+        {% endif %}
+    </table>
 
 {% endblock %}
