--- a/wsgiadmin/templates/admin.html
+++ b/wsgiadmin/templates/admin.html
@@ -66,7 +66,7 @@
             <div id="content">
                 <div id="content-inside">
                     <ul id="notifications">
-                        {% if u.parms.count_domains %}
+                        {% if not u.parms.count_domains %}
                         <li class="info">
                             {% blocktrans %}
                                 Most of services depends on domain. Good place to start right now is
