--- a/wsgiadmin/templates/apache.html
+++ b/wsgiadmin/templates/apache.html
@@ -61,12 +61,12 @@
                         {% endif %}
                         {% if site.type == "uwsgi" or site.type == "modwsgi" %}
                             {% if site.type == "uwsgi" %}
-                                <a href="{% url wsgiadmin.apacheconf.views.restart site.id %}"><img src="{{ STATIC_URL }}icons/raster/gray_dark/loop_16x16.png" alt="Restartovat"/></a>
+                                <a href="{% url wsgiadmin.apacheconf.views.restart site.id %}"><img src="{{ STATIC_URL }}icons/raster/gray_dark/loop_16x16.png" alt="Restart"/></a>
                             {% endif %}
-                            <a href="{% url wsgiadmin.apacheconf.views.update_wsgi site.id %}"><img src="{{ STATIC_URL }}icons/raster/gray_dark/pen_alt_stroke_16x16.png" alt="Upravit"/></a>
+                            <a href="{% url wsgiadmin.apacheconf.views.update_wsgi site.id %}"><img src="{{ STATIC_URL }}icons/raster/gray_dark/pen_alt_stroke_16x16.png" alt="Edit"/></a>
                         {% endif %}
 
-                        <a href="#" id="remove_{{site.id}}" onclick="if(confirm('{% trans "Opravdu chcete web/apliakci zrušit?" %}')) {remove('{{site.id}}');};" class="bold">
+                        <a href="#" id="remove_{{site.id}}" onclick="if(confirm('{% trans "Are you sure?" %}')) {remove('{{site.id}}');};" class="bold">
                             <img src="{{ STATIC_URL }}icons/raster/gray_dark/trash_fill_16x16.png" alt="Delete"/>
                         </a>
                         <span id="removed_{{site.id}}" class="info"></span>
@@ -79,7 +79,7 @@
                 <td colspan="4">
                     <div class="pagination">
                         {% if sites.has_previous %}
-                            <a href="{% url wsgiadmin.apacheconf.views.apache 1 %}" title="{% trans "První stránka" %}">&laquo; {% trans "First" %}</a>{% endif %}
+                            <a href="{% url wsgiadmin.apacheconf.views.apache 1 %}" title="{% trans "First page" %}">&laquo; {% trans "First" %}</a>{% endif %}
                         {% if sites.has_previous %}
                             <a href="{% url wsgiadmin.apacheconf.views.apache sites.previous_page_number %}" title="{% trans "Previous page" %}">&laquo; {% trans "Previous" %}</a>{% endif %}
 
@@ -92,7 +92,7 @@
                         {% endfor %}
 
                         {% if sites.has_next %}
-                            <a href="{% url wsgiadmin.apacheconf.views.apache sites.next_page_number %}" title="{% trans "Nex page" %}">{% trans "Next" %} &raquo;</a>{% endif %}
+                            <a href="{% url wsgiadmin.apacheconf.views.apache sites.next_page_number %}" title="{% trans "Next page" %}">{% trans "Next" %} &raquo;</a>{% endif %}
                         {% if sites.has_next %}
                             <a href="{% url wsgiadmin.apacheconf.views.apache paginator.num_pages %}" title="{% trans "Last page" %}">{% trans "Last" %} &raquo;</a>{% endif %}
                     </div>
