--- a/wsgiadmin/templates/db.html
+++ b/wsgiadmin/templates/db.html
@@ -60,7 +60,7 @@
                         <a href="{% url db_passwd dbtype=dbtype dbname=db %}" class="db_pwdchange" title="{% trans "Change password" %}" rel="{{ db }}">
                             <img src="{{ STATIC_URL }}icons/raster/gray_dark/key_stroke_16x16.png" alt="{% trans "Change password" %}"/>
                         </a>
-                        <a href="#" class="db_delete" title="{% trans "Smazat" %}" rel="{{ db }}">
+                        <a href="#" class="db_delete" title="{% trans "Delete" %}" rel="{{ db }}">
                             <img src="{{ STATIC_URL }}icons/raster/gray_dark/trash_fill_16x16.png" alt="{% trans "Delete" %}"/>
                         </a>
                     </td>
