--- a/wsgiadmin/templates/ftps.html
+++ b/wsgiadmin/templates/ftps.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% block title %}
-	{% trans "Administrace > FTP účty" %}
+	{% trans "Administration - FTP accounts" %}
 {% endblock %}
 
 {% block jsblock %}
@@ -14,13 +14,13 @@ function remove(what) {
 {% block content %}
 
 <div id="message-box"></div>
-<h3>{% trans "Seznam FTP účtů" %}</h3>
+<h3>{% trans "List of FTP accounts" %}</h3>
 <table>
 	<thead>
 		<tr>
-		   <th>{% trans "Přihlašovací jméno" %}</th>
-		   <th>{% trans "Adresář" %}</th>
-		   <th>{% trans "Akce" %}</th>
+		   <th>{% trans "Login" %}</th>
+		   <th>{% trans "Directory" %}</th>
+		   <th>{% trans "Action" %}</th>
 		</tr>
 	</thead>
 	{% if ftps %}
@@ -30,9 +30,9 @@ function remove(what) {
 			<td>{{ ftp.username }}</td>
 			<td>{{ ftp.dir }}</td>
 			<td id="ftp_{{ ftp.id }}">
-				<a href="{% url wsgiadmin.ftps.views.passwd ftp.id %}" title="{% trans "Změnit heslo" %}"><img src="{{ STATIC_URL }}icons/raster/gray_dark/key_stroke_16x16.png" alt="{% trans "Změnit heslo" %}" /></a>
-				<a href="{% url wsgiadmin.ftps.views.update ftp.id %}" title="{% trans "Upravit" %}"><img src="{{ STATIC_URL }}icons/raster/gray_dark/pen_alt_stroke_16x16.png" alt="{% trans "Upravit" %}" /></a>
-				<a href="#" title="{% trans "Smazat" %}" onclick="if(confirm('Opravdu chcete smazat doménu {{ ftp.name }}?')) remove({{ ftp.id }})"><img src="{{ STATIC_URL }}icons/raster/gray_dark/trash_fill_16x16.png" alt="{% trans "Smazat" %}" /></a>
+				<a href="{% url wsgiadmin.ftps.views.passwd ftp.id %}" title="{% trans "Change password" %}"><img src="{{ STATIC_URL }}icons/raster/gray_dark/key_stroke_16x16.png" alt="{% trans "Change password" %}" /></a>
+				<a href="{% url wsgiadmin.ftps.views.update ftp.id %}" title="{% trans "Edit" %}"><img src="{{ STATIC_URL }}icons/raster/gray_dark/pen_alt_stroke_16x16.png" alt="{% trans "Edit" %}" /></a>
+				<a href="#" title="{% trans "Delete" %}" onclick="if(confirm('Are you sure?')) remove({{ ftp.id }})"><img src="{{ STATIC_URL }}icons/raster/gray_dark/trash_fill_16x16.png" alt="{% trans "Delete" %}" /></a>
 			</td>
 		</tr>
 		{% endfor %}
@@ -41,8 +41,8 @@ function remove(what) {
 		<tr>
 			<td colspan="3">
 					<div class="pagination">
-						{% if ftps.has_previous %}<a href="{% url wsgiadmin.ftps.views.show 1 %}" title="{% trans "První stránka" %}">&laquo; {% trans "První" %}</a>{% endif %}
-						{% if ftps.has_previous %}<a href="{% url wsgiadmin.ftps.views.show ftps.previous_page_number %}" title="{% trans "Předchozí stránka" %}">&laquo; {% trans "Předchozí" %}</a>{% endif %}
+						{% if ftps.has_previous %}<a href="{% url wsgiadmin.ftps.views.show 1 %}" title="{% trans "First page" %}">&laquo; {% trans "First" %}</a>{% endif %}
+						{% if ftps.has_previous %}<a href="{% url wsgiadmin.ftps.views.show ftps.previous_page_number %}" title="{% trans "Previous page" %}">&laquo; {% trans "Previous" %}</a>{% endif %}
 
 						{% for p in paginator.page_range %}
 							{% if p == num_page %}
@@ -52,8 +52,8 @@ function remove(what) {
 							{% endif %}
 						{% endfor %}
 
-						{% if ftps.has_next %}<a href="{% url wsgiadmin.ftps.views.show ftps.next_page_number %}" title="{% trans "Další stránka" %}">{% trans "Další" %} &raquo;</a>{% endif %}
-						{% if ftps.has_next %}<a href="{% url wsgiadmin.ftps.views.show paginator.num_pages %}" title="{% trans "Poslední stránka" %}">{% trans "Poslední" %} &raquo;</a>{% endif %}
+						{% if ftps.has_next %}<a href="{% url wsgiadmin.ftps.views.show ftps.next_page_number %}" title="{% trans "Next page" %}">{% trans "Next" %} &raquo;</a>{% endif %}
+						{% if ftps.has_next %}<a href="{% url wsgiadmin.ftps.views.show paginator.num_pages %}" title="{% trans "Last page" %}">{% trans "Last" %} &raquo;</a>{% endif %}
 					</div>
 					<div class="clear"></div>
 			</td>
