--- a/wsgiadmin/templates/invoices.html
+++ b/wsgiadmin/templates/invoices.html
@@ -74,7 +74,7 @@ function send_item(what) {
 				{% if not invoice.payed %}<span id="payback_{{ invoice.id }}"><a href="#" onclick="$('#payback_{{ invoice.id }}').load('{% url wsgiadmin.invoices.views.payback invoice.id %}')">Zaplaceno</a></span>{% endif %}
 				<a href="{% url wsgiadmin.invoices.views.invoice_get invoice.payment_id %}">{% trans "Stáhnout" %}</a>
 				<a href="{% url wsgiadmin.invoices.views.update_invoice invoice.id %}" title="Upravit"><img src="{{ STATIC_URL }}images/icons/pencil.png" alt="Upravit" /></a>
-				<a href="#" title="Smazat" onclick="if(confirm('Opravdu chcete smazat fakturu {{ invoice.payment_id }}?')) remove('{{ invoice.id }}')"><img src="{{ STATIC_URL }}images/icons/cross.png" alt="{% trans "Smazat" %}" /></a>
+				<a href="#" title="Smazat" onclick="if(confirm('Opravdu chcete smazat fakturu {{ invoice.payment_id }}?')) remove('{{ invoice.id }}')"><img src="{{ STATIC_URL }}images/icons/cross.png" alt="{% trans "Delete" %}" /></a>
 				{% if not invoice.sended %}
 					<a href="#" title="Odeslat" onclick="if(confirm('Opravdu chcete odeslat fakturu {{ invoice.payment_id }}?')) send_item('{{ invoice.payment_id }}')">Odeslat</a>
 				{% else %}
@@ -93,8 +93,8 @@ function send_item(what) {
 				<td>{{ item.price_per_one }} kč</td>
 				<td>{{ item.total }} kč</td>
 				<td id="item_{{ item.id }}">
-					<a href="{% url wsgiadmin.invoices.views.update_item item.id %}" title="{% trans "Upravit" %}"><img src="{{ STATIC_URL }}images/icons/pencil.png" alt="Upravit" /></a>
-					<a href="#" title="{% trans "Smazat" %}" onclick="if(confirm('Opravdu chcete smazat položku {{ item.id }}?')) remove_item('{{ item.id }}')"><img src="{{ STATIC_URL }}images/icons/cross.png" alt="Smazat" /></a>
+					<a href="{% url wsgiadmin.invoices.views.update_item item.id %}" title="{% trans "Edit" %}"><img src="{{ STATIC_URL }}images/icons/pencil.png" alt="Upravit" /></a>
+					<a href="#" title="{% trans "Delete" %}" onclick="if(confirm('Opravdu chcete smazat položku {{ item.id }}?')) remove_item('{{ item.id }}')"><img src="{{ STATIC_URL }}images/icons/cross.png" alt="Smazat" /></a>
 				</td>
 			</tr>
 			{% endfor %}
@@ -105,8 +105,8 @@ function send_item(what) {
 		<tr>
 			<td colspan="6">
 					<div class="pagination">
-						{% if invoices.has_previous %}<a href="{% url wsgiadmin.invoices.views.show 1 %}" title="{% trans "První stránka" %}">&laquo; {% trans "První" %}</a>{% endif %}
-						{% if invoices.has_previous %}<a href="{% url wsgiadmin.invoices.views.show invoices.previous_page_number %}" title="{% trans "Předchozí stránka" %}">&laquo; {% trans "Předchozí" %}</a>{% endif %}
+						{% if invoices.has_previous %}<a href="{% url wsgiadmin.invoices.views.show 1 %}" title="{% trans "First page" %}">&laquo; {% trans "First" %}</a>{% endif %}
+						{% if invoices.has_previous %}<a href="{% url wsgiadmin.invoices.views.show invoices.previous_page_number %}" title="{% trans "Previous page" %}">&laquo; {% trans "Previous" %}</a>{% endif %}
 
 						{% for p in paginator.page_range %}
 							{% if p == num_page %}
@@ -116,8 +116,8 @@ function send_item(what) {
 							{% endif %}
 						{% endfor %}
 
-						{% if invoices.has_next %}<a href="{% url wsgiadmin.invoices.views.show invoices.next_page_number %}" title="{% trans "Další stránka" %}">{% trans "Další" %} &raquo;</a>{% endif %}
-						{% if invoices.has_next %}<a href="{% url wsgiadmin.invoices.views.show paginator.num_pages %}" title="{% trans "Poslední stránka" %}">{% trans "Poslední" %} &raquo;</a>{% endif %}
+						{% if invoices.has_next %}<a href="{% url wsgiadmin.invoices.views.show invoices.next_page_number %}" title="{% trans "Next page" %}">{% trans "Next" %} &raquo;</a>{% endif %}
+						{% if invoices.has_next %}<a href="{% url wsgiadmin.invoices.views.show paginator.num_pages %}" title="{% trans "Last page" %}">{% trans "Last" %} &raquo;</a>{% endif %}
 					</div>
 					<div class="clear"></div>
 			</td>
