--- a/wsgiadmin/templates/redirects.html
+++ b/wsgiadmin/templates/redirects.html
@@ -43,7 +43,7 @@
                     <td>{{ redirect.email }}</td>
                     <td>
                         <a href="{% url wsgiadmin.emails.views.changeRedirect redirect.id %}">
-                            <img src="{{ STATIC_URL }}icons/raster/gray_dark/pen_alt_stroke_16x16.png" alt="{% trans "Upravit" %}"/>
+                            <img src="{{ STATIC_URL }}icons/raster/gray_dark/pen_alt_stroke_16x16.png" alt="{% trans "Edit" %}"/>
                         </a>
                         <a href="#" id="remove_{{redirect.id}}" onclick="if(confirm('{% trans "Really remove chosen redirect?" %}')) {remove('{{redirect.id}}');};" class="bold">
                             <img src="{{ STATIC_URL }}icons/raster/gray_dark/trash_fill_16x16.png" alt="{% trans "Delete" %}" />
@@ -58,9 +58,9 @@
                 <td colspan="3">
                     <div class="pagination">
                         {% if redirects.has_previous %}
-                            <a href="{% url wsgiadmin.emails.views.redirects 1 %}" title="{% trans "První stránka" %}">&laquo; {% trans "První" %}</a>{% endif %}
+                            <a href="{% url wsgiadmin.emails.views.redirects 1 %}" title="{% trans "First page" %}">&laquo; {% trans "First" %}</a>{% endif %}
                         {% if redirects.has_previous %}
-                            <a href="{% url wsgiadmin.emails.views.redirects redirects.previous_page_number %}" title="{% trans "Předchozí stránka" %}">&laquo; {% trans "Předchozí" %}</a>{% endif %}
+                            <a href="{% url wsgiadmin.emails.views.redirects redirects.previous_page_number %}" title="{% trans "Previous page" %}">&laquo; {% trans "Previous" %}</a>{% endif %}
 
                         {% for p in paginator.page_range %}
                             {% if p == num_page %}
@@ -71,9 +71,9 @@
                         {% endfor %}
 
                         {% if redirects.has_next %}
-                            <a href="{% url wsgiadmin.emails.views.redirects redirects.next_page_number %}" title="{% trans "Další stránka" %}">{% trans "Další" %} &raquo;</a>{% endif %}
+                            <a href="{% url wsgiadmin.emails.views.redirects redirects.next_page_number %}" title="{% trans "Next page" %}">{% trans "Next" %} &raquo;</a>{% endif %}
                         {% if redirects.has_next %}
-                            <a href="{% url wsgiadmin.emails.views.redirects paginator.num_pages %}" title="{% trans "Poslední stránka" %}">{% trans "Poslední" %} &raquo;</a>{% endif %}
+                            <a href="{% url wsgiadmin.emails.views.redirects paginator.num_pages %}" title="{% trans "Last page" %}">{% trans "Last" %} &raquo;</a>{% endif %}
                     </div>
                     <div class="clear"></div>
                 </td>
