--- a/wsgiadmin/templates/users.html
+++ b/wsgiadmin/templates/users.html
@@ -64,8 +64,8 @@
 					<tr>
 						<td colspan="9">
 								<div class="pagination">
-									{% if users.has_previous %}<a href="{% url wsgiadmin.users.views.show 1 %}" title="{% trans "První stránka" %}">&laquo; {% trans "První" %}</a>{% endif %}
-									{% if users.has_previous %}<a href="{% url wsgiadmin.users.views.show users.previous_page_number %}" title="{% trans "Předchozí stránka" %}">&laquo; {% trans "Předchozí" %}</a>{% endif %}
+									{% if users.has_previous %}<a href="{% url wsgiadmin.users.views.show 1 %}" title="{% trans "First page" %}">&laquo; {% trans "First" %}</a>{% endif %}
+									{% if users.has_previous %}<a href="{% url wsgiadmin.users.views.show users.previous_page_number %}" title="{% trans "Previous page" %}">&laquo; {% trans "Previous" %}</a>{% endif %}
 				
 									{% for p in paginator.page_range %}
 										{% if p == num_page %}
@@ -75,8 +75,8 @@
 										{% endif %}
 									{% endfor %}
 				
-									{% if users.has_next %}<a href="{% url wsgiadmin.users.views.show users.next_page_number %}" title="{% trans "Další stránka" %}">{% trans "Další" %} &raquo;</a>{% endif %}
-									{% if users.has_next %}<a href="{% url wsgiadmin.users.views.show paginator.num_pages %}" title="{% trans "Poslední stránka" %}">{% trans "Poslední" %} &raquo;</a>{% endif %}
+									{% if users.has_next %}<a href="{% url wsgiadmin.users.views.show users.next_page_number %}" title="{% trans "Next page" %}">{% trans "Next" %} &raquo;</a>{% endif %}
+									{% if users.has_next %}<a href="{% url wsgiadmin.users.views.show paginator.num_pages %}" title="{% trans "Last page" %}">{% trans "Last" %} &raquo;</a>{% endif %}
 								</div>
 								<div class="clear"></div>
 						</td>
